--- a/case01.html
+++ b/case01.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+<style>
+    div{
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: 2px solid darkblue;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        animation: my-animation 2s;
+        animation-iteration-count: infinite;
+        animation-play-state: running;
+    }
+    @keyframes my-animation {
+        0% {
+            width: 50px;
+            height: 50px;
+            border-radius: 100%;
+            border: 2px solid darkblue;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+        25%{
+            width: 250px;
+            height: 250px;
+            border-radius: 100%;
+            border: 2px solid royalblue;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+
+
+        100% {
+            width: 400px;
+            height: 400px;
+            border-radius: 100%;
+            border: 2px solid white;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+
+    }
+
+
+
+
+</style>
 </head>
 <body>
-$END$
+   <div></div>
+   <div></div>
+   <div></div>
+   <div></div>
 </body>
 </html>
