--- a/case02.html
+++ b/case02.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+
+        section{
+
+            width: 100vw;
+            height: 100vh;
+        }
+
+        section>div{
+            width: 200px;
+            height: 100px;
+            border-radius: 20px;
+            background-color: darkblue;
+            animation: my-animation 8s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+
+            animation-play-state: running;
+        }
+        @keyframes my-animation {
+
+         0%{
+
+             background-color: red;
+             margin-top: 0;
+             margin-left: 0;
+
+         }
+            25%{
+
+                background-color: yellow;
+                margin-top: 0;
+                margin-left: calc(100vw - 200px);
+                transform: rotate(180deg);
+            }
+            50%{
+
+                background-color: greenyellow;
+
+              margin-top: calc(100vh - 100px);
+                margin-left: calc(100vw - 200px);
+                transform: rotate(360deg);
+
+            }
+            75%{
+
+
+                background-color: purple;
+
+                margin-top: calc(100vh - 100px);
+                margin-left: 0;
+                transform: rotate(180deg);
+            }
+            100%{
+
+                background-color: darkblue;
+
+                margin-top: 0;
+                margin-left: 0;
+
+
+            }
+        }
+    </style>
+
 </head>
 <body>
-$END$
+
+  <section>
+      <div></div>
+  </section>
+
+
 </body>
 </html>
